# agentic-ai-with-langchain

./: BasicAgents_vs_AgenticAI_vs_AgenticRAG.ipynb  README.md  configure_python_logging.ipynb  datamanipulation_with_pandas.ipynb  langchain-dataingestion.ipynb  logging_with_real_application.ipynb  multiplelogger.ipynb  numpy(vectors&matrices).ipynb  pandas(dataframes&series).ipynb  pydantic_library.ipynb  requirements.txt
debugging/: app.py  langgraph.json  openai_agent.py  requirements.txt
debugging/.langgraph_api/: .langgraph_ops.pckl
langchain/0-getting_started_with_openai_ollama/: building_gen_ai_app_with_openai.ipynb  building_langchain_components.ipynb
langchain/1-document_loaders/: dataingestion.ipynb  speech.txt
langchain/2-text_splitters/: char_text_splitter.ipynb  html_text_splitter.ipynb  recursive_json_splitter.ipynb  (+1 more)
langchain_v1.2.0/: 1-langchain_intro.ipynb  2-model_integration_with_langchain.ipynb  3-tools.ipynb  4-langchain_messages_types.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb  langchain_updated_uv_pm.ipynb  main.py  pyproject.toml
langgraph/: 0-langgraph_intro.ipynb  1-simplegraph.ipynb  10-streaming_using_stream_events.ipynb  11-streaming_using_astream_events.ipynb  2-developing_llm_powered_simple_chatbot.ipynb  3-DataclassStateSchema.ipynb  4-pydantic.ipynb  5-chains_using_langgraph.ipynb  6-routers.ipynb  7-chatbot_with_multiple_tools.ipynb  8-ReAct_agent_architecture.ipynb  9-ReAct_agent_architecture_implementation.ipynb  test.ipynb
workflows/: parallelization.ipynb  prompt_chaining.ipynb  routing.ipynb
(+13 files in other folders)
